updet stayl and info

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./styls/body.css">
 
 </head>
-<body>
+<body id="top">
 
     <nav class="nev-bar">
         <div>
@@ -49,6 +49,33 @@
                     </div>
                 </a>
             </div>
+
+            <div class="go-shopping">
+              <a href="#all-items">
+                  <img src="svg's/tag-price-svgrepo-com.svg" alt="" class="nav-svg">
+                  <div>
+                      <h1>go shopping</h1>
+                  </div>
+              </a>
+          </div>
+
+          <div class="back-to-top">
+            <a href="#top">
+                <img src="svg's/top-arrow-4-svgrepo-com.svg" alt="" class="nav-svg">
+                <div>
+                    <h1>back-to-top</h1>
+                </div>
+            </a>
+        </div>
+
+        <div>
+          <a href="#testimonials">
+              <img src="svg's/customer-testimonial-svgrepo-com.svg" alt="" class="nav-svg">
+              <div>
+                  <h1>Testimonials</h1>
+              </div>
+          </a>
+      </div>
         </div>
     </nav>
     <div class="main-continer">
@@ -61,7 +88,12 @@
             <img src="images/arnave-studio-logo.png" alt="Overlay Image">
           </div>
 
-        <div class="all-items">
+          <section class="intro">
+            <h1>Welcome to Arnav Jewelry</h1>
+            <p>Discover our handcrafted, one-of-a-kind jewelry collections made with love and precision.</p>
+          </section>
+
+        <div class="all-items" id="all-items">
             <div class="items">
 
               <a href="./product-page's/kneading-ring.html">
@@ -207,6 +239,19 @@
               </div>
               
         </div>
+
+        <section class="testimonials">
+          <h2>What Our Customers Say</h2>
+          <div class="testimonial">
+            <p>"Amazing quality and beautiful designs. Highly recommend!"</p>
+            <p>- Sarah L.</p>
+          </div>
+          <div class="testimonial" id="testimonials">
+            <p>"Best jewelry I've ever bought! Stunning and unique."</p>
+            <p>- David R.</p>
+          </div>
+        </section>
+        
 
         <footer class="social-media">
             <div class="facebook svg">
