--- a/product-page's/heartstrings-ring.html
+++ b/product-page's/heartstrings-ring.html
@@ -72,9 +72,9 @@
     </div>
 
     <div class="product-details">
-      <h1>Product Name</h1>
+      <h1>Heartstrings Ring</h1>
       <p class="product-description">
-        This is a detailed description of the product. It describes the features, materials, and benefits of the product.
+        This stunning handcrafted gold ring is a unique expression of elegance and creativity. Designed with flowing curves and intricate detailing, it offers a modern take on classic jewelry. Perfect for any occasion, this ring effortlessly complements both casual and formal styles. Its lightweight yet durable design ensures comfort while making a bold statement of sophistication. Treat yourself or a loved one to this timeless piece of art.
       </p>
 
       <div class="product-options">
@@ -86,8 +86,8 @@
           <input type="radio" id="gold" name="material" value="Gold" class="option-input">
           <label for="gold" class="option-label">Gold</label>
       
-          <input type="radio" id="white-gold" name="material" value="White Gold" class="option-input">
-          <label for="white-gold" class="option-label">White Gold</label>
+          <input type="radio" id="white-gold" name="material" value="Red Gold" class="option-input">
+          <label for="white-gold" class="option-label">Red Gold</label>
         </div>
       </div>      
 
