--- a/product-page's/kneading-ring.html
+++ b/product-page's/kneading-ring.html
@@ -72,9 +72,9 @@
     </div>
 
     <div class="product-details">
-      <h1>Product Name</h1>
+      <h1>Kneading Ring</h1>
       <p class="product-description">
-        This is a detailed description of the product. It describes the features, materials, and benefits of the product.
+        This handcrafted hammered gold ring is a timeless piece that combines elegance and simplicity. Made from premium 18k gold, its unique texture reflects light beautifully, creating a rustic yet sophisticated look. Perfect for everyday wear or special occasions, this ring is a stunning symbol of individuality and craftsmanship.
       </p>
 
       <div class="product-options">
@@ -86,8 +86,8 @@
           <input type="radio" id="gold" name="material" value="Gold" class="option-input">
           <label for="gold" class="option-label">Gold</label>
       
-          <input type="radio" id="white-gold" name="material" value="White Gold" class="option-input">
-          <label for="white-gold" class="option-label">White Gold</label>
+          <input type="radio" id="white-gold" name="material" value="Red Gold" class="option-input">
+          <label for="white-gold" class="option-label">Red Gold</label>
         </div>
       </div>      
 
