--- a/product-page's/leaves-ring.html
+++ b/product-page's/leaves-ring.html
@@ -72,9 +72,9 @@
     </div>
 
     <div class="product-details">
-      <h1>Product Name</h1>
+      <h1>Leaves Ring</h1>
       <p class="product-description">
-        This is a detailed description of the product. It describes the features, materials, and benefits of the product.
+        This elegant and minimalistic gold ring features a sophisticated crisscross design that seamlessly blends modern aesthetics with timeless charm. Its delicate yet durable structure offers a comfortable fit, making it perfect for daily wear or special occasions. Handcrafted with precision, this piece is a testament to refined craftsmanship and understated luxury. Whether paired with other accessories or worn on its own, this ring is a versatile addition to any jewelry collection.
       </p>
 
       <div class="product-options">
@@ -86,8 +86,8 @@
           <input type="radio" id="gold" name="material" value="Gold" class="option-input">
           <label for="gold" class="option-label">Gold</label>
       
-          <input type="radio" id="white-gold" name="material" value="White Gold" class="option-input">
-          <label for="white-gold" class="option-label">White Gold</label>
+          <input type="radio" id="white-gold" name="material" value="Red Gold" class="option-input">
+          <label for="white-gold" class="option-label">Red Gold</label>
         </div>
       </div>      
 
