--- a/product-page's/rotating-ring.html
+++ b/product-page's/rotating-ring.html
@@ -72,9 +72,9 @@
     </div>
 
     <div class="product-details">
-      <h1>Product Name</h1>
+      <h1>Rotating Ring</h1>
       <p class="product-description">
-        This is a detailed description of the product. It describes the features, materials, and benefits of the product.
+        This intricately designed gold ring features a stunning blend of textures and craftsmanship, highlighted by a unique braided detail at its center. Its bold yet elegant design makes it a perfect accessory for those who appreciate timeless jewelry with a modern twist. Durable and versatile, this ring is ideal for everyday wear or as a meaningful gift for someone special. A true statement piece that embodies sophistication and artistry.
       </p>
 
       <div class="product-options">
@@ -86,8 +86,8 @@
           <input type="radio" id="gold" name="material" value="Gold" class="option-input">
           <label for="gold" class="option-label">Gold</label>
       
-          <input type="radio" id="white-gold" name="material" value="White Gold" class="option-input">
-          <label for="white-gold" class="option-label">White Gold</label>
+          <input type="radio" id="white-gold" name="material" value="Red Gold" class="option-input">
+          <label for="white-gold" class="option-label">Red Gold</label>
         </div>
       </div>      
 
