--- a/product-page's/square-pendant.html
+++ b/product-page's/square-pendant.html
@@ -72,9 +72,9 @@
     </div>
 
     <div class="product-details">
-      <h1>Product Name</h1>
+      <h1>Square Pendant</h1>
       <p class="product-description">
-        This is a detailed description of the product. It describes the features, materials, and benefits of the product.
+        These geometric silver earrings showcase a modern and minimalistic design, featuring two handcrafted diamond-shaped elements connected with a delicate loop. The subtle hammered texture adds a unique touch of elegance, enhancing their artisanal charm. Lightweight and versatile, these earrings are perfect for everyday wear or for adding a sophisticated accent to a special occasion outfit. A timeless accessory for lovers of contemporary jewelry.
       </p>
 
       <div class="product-options">
@@ -86,8 +86,8 @@
           <input type="radio" id="gold" name="material" value="Gold" class="option-input">
           <label for="gold" class="option-label">Gold</label>
       
-          <input type="radio" id="white-gold" name="material" value="White Gold" class="option-input">
-          <label for="white-gold" class="option-label">White Gold</label>
+          <input type="radio" id="white-gold" name="material" value="Red Gold" class="option-input">
+          <label for="white-gold" class="option-label">Red Gold</label>
         </div>
       </div>      
 
