--- a/product-page's/braid-ring.html
+++ b/product-page's/braid-ring.html
@@ -72,9 +72,9 @@
     </div>
 
     <div class="product-details">
-      <h1>Product Name</h1>
+      <h1>Braid Ring</h1>
       <p class="product-description">
-        This is a detailed description of the product. It describes the features, materials, and benefits of the product.
+        This dainty handcrafted gold ring exudes simplicity and elegance with its subtle hammered texture. Its lightweight and minimalist design make it a versatile accessory, perfect for stacking or wearing alone as a delicate statement piece. The ring’s timeless charm and understated sophistication make it an ideal choice for any occasion, whether casual or formal. A perfect addition to your everyday jewelry collection.
       </p>
 
       <div class="product-options">
@@ -86,8 +86,8 @@
           <input type="radio" id="gold" name="material" value="Gold" class="option-input">
           <label for="gold" class="option-label">Gold</label>
       
-          <input type="radio" id="white-gold" name="material" value="White Gold" class="option-input">
-          <label for="white-gold" class="option-label">White Gold</label>
+          <input type="radio" id="white-gold" name="material" value="Red Gold" class="option-input">
+          <label for="white-gold" class="option-label">Red Gold</label>
         </div>
       </div>      
 
