--- a/product-page's/triangles-ring.html
+++ b/product-page's/triangles-ring.html
@@ -72,9 +72,9 @@
     </div>
 
     <div class="product-details">
-      <h1>Product Name</h1>
+      <h1>Triangles Ring</h1>
       <p class="product-description">
-        This is a detailed description of the product. It describes the features, materials, and benefits of the product.
+        This handcrafted gold ring features a stunning geometric cutout design that showcases both elegance and modernity. Made from premium 18k gold, its unique pattern adds a touch of sophistication while allowing light to pass through for a captivating effect. Perfect for those who appreciate bold and artistic jewelry, this ring is a statement piece that combines contemporary style with traditional craftsmanship.
       </p>
 
       <div class="product-options">
@@ -86,8 +86,8 @@
           <input type="radio" id="gold" name="material" value="Gold" class="option-input">
           <label for="gold" class="option-label">Gold</label>
       
-          <input type="radio" id="white-gold" name="material" value="White Gold" class="option-input">
-          <label for="white-gold" class="option-label">White Gold</label>
+          <input type="radio" id="white-gold" name="material" value="Red Gold" class="option-input">
+          <label for="white-gold" class="option-label">Red Gold</label>
         </div>
       </div>      
 
